Estilizando e criando os HTML

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solução Contra Enchentes - BrainRotters</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./src/css/estilo.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="#problema">Problema</a></li>
-        <li><a href="#tecnologias">Tecnologias</a></li>
-        <li><a href="#objetivos">Objetivos</a></li>
-        <li><a href="#publico">Público-alvo</a></li>
-        <li><a href="#beneficios">Benefícios</a></li>
-        <li><a href="#uso">Uso Diário</a></li>
+        <li><a href="./index.html">Problema</a></li>
+        <li><a href="./tecnologia.html">Tecnologias</a></li>
+        <li><a href="./obejtivos.html">Objetivos</a></li>
+        <li><a href="./publico.html">Público-alvo</a></li>
+        <li><a href="./beneficios.html">Benefícios</a></li>
+        <li><a href="./usodiario.html">Uso Diário</a></li>
       </ul>
     </nav>
   </header>
@@ -62,5 +62,10 @@
   <footer>
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
+
+
+
+
+  <script src="./src/js/script.js"></script>
 </body>
 </html>
