Mexendo no HTML e colocando imagens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="./index.html">Problema</a></li>
+        <li><a href="./index.html">Problemas</a></li>
         <li><a href="./tecnologia.html">Tecnologias</a></li>
         <li><a href="./obejtivos.html">Objetivos</a></li>
         <li><a href="./publico.html">Público-alvo</a></li>
@@ -21,51 +21,69 @@
     </nav>
   </header>
 
-  <main>
-    <section id="problema">
-      <h2>O problema que nossa solução resolve</h2>
-      <p>Enchentes causam danos a comunidades. Nossa solução alerta e monitora riscos em tempo real.</p>
-      <img src="images/problema.png" alt="Área alagada com casas afetadas">
+ <main>
+    <section id="introducao">
+      <h2>Introdução</h2>
+      <p>As enchentes são fenômenos naturais intensificados por ações humanas. Com o aumento da urbanização e mudanças climáticas, eventos extremos se tornam mais frequentes e perigosos. É necessário compreender suas origens e impactos para enfrentá-las de forma eficaz.</p>
+      <img src="./src/assets/cidadealagada.jpg" alt="Imagem aérea de uma cidade alagada">
     </section>
 
-    <section id="tecnologias">
-      <h2>Tecnologias utilizadas</h2>
-      <p>IoT, Python, banco de dados, inteligência artificial e mapas interativos com APIs modernas.</p>
-      <img src="images/tecnologias.png" alt="Tecnologias representadas graficamente">
+    <section id="impactos">
+      <h2>Impactos das Enchentes</h2>
+      <ul>
+        <li><strong>Humanos:</strong> mortes, feridos e desalojados.</li>
+        <li><strong>Infraestrutura:</strong> destruição de estradas, pontes, casas e escolas.</li>
+        <li><strong>Econômicos:</strong> prejuízos bilionários e paralisação da economia local.</li>
+        <li><strong>Ambientais:</strong> erosão, contaminação de rios e perda de biodiversidade.</li>
+      </ul>
+      <img src="./src/assets/moradorapé.jpg" alt="Moradores caminhando em rua alagada">
     </section>
 
-    <section id="objetivos">
-      <h2>Objetivos do projeto</h2>
-      <p>Monitorar rios, prever enchentes e criar alertas personalizados para proteger vidas.</p>
-      <img src="images/objetivos.png" alt="Ícones de metas e proteção ambiental">
+    <section id="causas">
+      <h2>Principais Causas</h2>
+      <p>As enchentes urbanas são causadas por uma combinação de fatores naturais e antrópicos:</p>
+      <ul>
+        <li>Chuvas intensas em curtos períodos de tempo.</li>
+        <li>Impermeabilização do solo (asfalto, concreto).</li>
+        <li>Sistemas de drenagem ineficientes ou obstruídos.</li>
+        <li>Construções em áreas de várzea e encostas.</li>
+        <li>Desmatamento e descarte incorreto de resíduos.</li>
+      </ul>
+      <img src="./src/assets/lixopósalagamento.jpg" alt="Entulho e lixo obstruindo bueiros">
     </section>
 
-    <section id="publico">
-      <h2>Público-alvo</h2>
-      <p>Moradores de áreas de risco, defesa civil e gestores municipais.</p>
-      <img src="images/publico.png" alt="Famílias e agentes públicos em regiões de risco">
+    <section id="consequencias">
+      <h2>Consequências Sociais e Ambientais</h2>
+      <p>Além dos prejuízos materiais, enchentes agravam problemas sociais:</p>
+      <ul>
+        <li>Doenças como leptospirose e dengue.</li>
+        <li>Interrupção de serviços essenciais: saúde, transporte e educação.</li>
+        <li>Desigualdade social acentuada em comunidades mais vulneráveis.</li>
+      </ul>
+      <img src="./src/assets/pessoasemabrigo.jpg" alt="Pessoas abrigadas após enchente">
     </section>
 
-    <section id="beneficios">
-      <h2>Benefícios da solução</h2>
-      <p>Alertas antecipados, planos de evacuação e redução de danos materiais e humanos.</p>
-      <img src="images/beneficios.png" alt="Pessoas seguras após evacuação bem-sucedida">
+    <section id="dados">
+      <h2>Dados e Estatísticas</h2>
+      <p>Segundo a Defesa Civil e IBGE:</p>
+      <ul>
+        <li>Mais de <strong>2 mil municípios brasileiros</strong> registraram enchentes nos últimos 10 anos.</li>
+        <li>As perdas econômicas ultrapassam <strong>R$ 100 bilhões</strong> no mesmo período.</li>
+        <li>Eventos extremos tendem a se intensificar com o <strong>aquecimento global</strong>.</li>
+      </ul>
+      <img src="./src/assets/grafico.jpg" alt="Gráfico de aumento de enchentes por década">
     </section>
 
-    <section id="uso">
-      <h2>Uso no dia a dia</h2>
-      <p>Usuários recebem alertas no celular e acompanham o nível dos rios pelo aplicativo.</p>
-      <img src="images/uso.png" alt="Notificação de alerta no smartphone">
-    </section>
   </main>
+
+
+  
+
+
 
   <footer>
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
-
-
-
-
   <script src="./src/js/script.js"></script>
 </body>
 </html>
