--- a/publico.html
+++ b/publico.html
@@ -9,11 +9,12 @@
 </head>
 <body>
   <header>
+    <h1 id="logo">Problemas</h1>
     <nav>
       <ul class="menu">
-        <li><a href="./index.html">Problema</a></li>
+        <li><a href="./index.html">Problemas</a></li>
         <li><a href="./tecnologia.html">Tecnologias</a></li>
-        <li><a href="./obejtivos.html">Objetivos</a></li>
+        <li><a href="./objetivos.html">Objetivos</a></li>
         <li><a href="./publico.html">Público-alvo</a></li>
         <li><a href="./beneficios.html">Benefícios</a></li>
         <li><a href="./usodiario.html">Uso Diário</a></li>
