--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <div class="slideshow-container">
+    <img id="image" src="./src/assets/cidadealagada.jpg" alt="Slideshow" />
+  </div>
+
+
   <header>
     <h1 id="logo">Problemas</h1>
     <nav>
