Fazendo o javascript e css do quiz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
 
-  <header>
+    <header>
     <h1 id="logo">Problemas</h1>
     <nav>
       <ul class="menu">
@@ -23,7 +23,7 @@
         <li><a href="./objetivos.html">Objetivos</a></li>
         <li><a href="./publico.html">Público-alvo</a></li>
         <li><a href="./beneficios.html">Benefícios</a></li>
-        <li><a href="./usodiario.html">Uso Diário</a></li>
+        <li><a href="./quiz.html">Quiz</a></li>
       </ul>
     </nav>
   </header>
