--- a/objetivos.html
+++ b/objetivos.html
@@ -8,16 +8,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+    <header>
     <h1 id="logo">Objetivos</h1>
     <nav>
       <ul class="menu">
-        <li><a href="./index.html">Problema</a></li>
+        <li><a href="./index.html">Problemas</a></li>
         <li><a href="./tecnologia.html">Tecnologias</a></li>
         <li><a href="./objetivos.html">Objetivos</a></li>
         <li><a href="./publico.html">Público-alvo</a></li>
         <li><a href="./beneficios.html">Benefícios</a></li>
-        <li><a href="./usodiario.html">Uso Diário</a></li>
+        <li><a href="./quiz.html">Quiz</a></li>
       </ul>
     </nav>
   </header>
