--- a/tecnologia.html
+++ b/tecnologia.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 id="logo">Problemas</h1>
+    <h1 id="logo">Quiz</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
@@ -17,7 +17,7 @@
         <li><a href="./objetivos.html">Objetivos</a></li>
         <li><a href="./publico.html">Público-alvo</a></li>
         <li><a href="./beneficios.html">Benefícios</a></li>
-        <li><a href="./usodiario.html">Uso Diário</a></li>
+        <li><a href="./quiz.html">Quiz</a></li>
       </ul>
     </nav>
   </header>
