adicionando footer nos html

--- a/quiz.html
+++ b/quiz.html
@@ -41,6 +41,11 @@
 
     </main>
 
- <script src="../js/quiz.js"></script>   
+
+    <footer>
+    <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
+  </footer>
+
+ <script src="./src/js/script.js"></script>   
 </body>
 </html>
