--- a/publico.html
+++ b/publico.html
@@ -21,3 +21,15 @@
       </ul>
     </nav>
   </header>
+
+
+
+
+
+
+   <footer>
+    <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
+  </footer>
+  <script src="./src/js/script.js"></script>
+</body>
+</html>
