fazendo a função alert e ajustando o javascript do quiz

--- a/quiz.html
+++ b/quiz.html
@@ -46,6 +46,6 @@
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
 
- <script src="./src/js/script.js"></script>   
+ <script src="./src/js/quiz.js"></script>   
 </body>
 </html>
