criando aba tecnologia

--- a/tecnologia.html
+++ b/tecnologia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
   <link rel="stylesheet" href="./src/css/estilo.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
-    <h1 id="logo">Quiz</h1>
+    <h1 id="logo">Tecnologia</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
@@ -21,6 +23,16 @@
       </ul>
     </nav>
   </header>
+  <main id="container-tec">
+
+    <section id="objetivos">
+      <h2>Objetivos da Solução</h2>
+      <p>Nosso objetivo é minimizar os impactos das enchentes por meio de sensores inteligentes que monitoram níveis de
+        água em tempo real.</p>
+      <p>Pretendemos alertar comunidades e autoridades com antecedência, permitindo ações rápidas e seguras para evitar
+        danos materiais e humanos.</p>
+      <img src="src/assets/enchente.png" alt="Ilustração do funcionamento do controlador de enchentes">
+    </section>
 
 
 
@@ -30,14 +42,15 @@
 
 
 
+    </div>
 
 
+  </main>
 
-
-
-   <footer>
+  <footer>
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
   <script src="./src/js/script.js"></script>
 </body>
+
 </html>
