criando aba publico

--- a/publico.html
+++ b/publico.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
   <link rel="stylesheet" href="./src/css/estilo.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   <header>
-    <h1 id="logo">Quiz</h1>
+  <header>
+    <h1 id="logo">Público-Alvo</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
@@ -21,15 +23,22 @@
       </ul>
     </nav>
   </header>
+  <section id="publico-alvo">
+    <h2>Público-Alvo</h2>
+    <p>O produto é direcionado a prefeituras, engenheiros civis e defesa civil, atuando em áreas urbanas com riscos
+      frequentes.</p>
+    <p>Visa proteger populações vulneráveis por meio de alertas, monitoramento em tempo real e decisões preventivas
+      baseadas em dados confiáveis e seguros.</p>
+    <img src="src/assets/prefeito.png" alt="Comunidade e autoridades monitorando enchentes com tecnologia">
+  </section>
 
 
 
 
-
-
-   <footer>
+  <footer>
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
   <script src="./src/js/script.js"></script>
 </body>
+
 </html>
