mudando imagens e mexendo no html

--- a/objetivos.html
+++ b/objetivos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1 id="logo">Objetivos</h1>
+    <h1 id="logo">Tecnologia</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
@@ -21,85 +21,32 @@
       </ul>
     </nav>
   </header>
-  <main class="container">
-    <section id="geral" class="section">
+  <main id="container-tec">
+
+    <section id="objetivos">
       <h2>🎯 Objetivo Geral</h2>
-      <p>
-        Desenvolver uma solução tecnológica inteligente que permita o monitoramento, previsão e resposta rápida a enchentes em áreas urbanas e rurais, reduzindo danos humanos, sociais e ambientais.
-      </p>
+      <p>Desenvolver uma solução tecnológica para monitoramento e previsão de enchentes, reduzindo danos humanos, sociais e ambientais em áreas urbanas.</p>
+      <p>Instalar sistemas de drenagem eficientes, utilizar sensores para monitoramento e criar alertas rápidos para prevenir danos em áreas vulneráveis.</p>
+      <img src="./src/assets/objetivos.png" alt="Ilustração do Objetivo">
     </section>
 
-    <section id="especificos" class="section">
-      <h2>📌 Objetivos Específicos</h2>
-      <ul>
-        <li>Instalar sensores IoT para medir níveis hídricos em tempo real.</li>
-        <li>Integrar dados com sistemas de alerta via app, SMS e e-mail.</li>
-        <li>Registrar histórico de enchentes e gerar análises preditivas.</li>
-        <li>Fornecer uma dashboard visual para tomada de decisões rápidas.</li>
-        <li>Customizar planos de emergência conforme a localização do usuário.</li>
-      </ul>
-    </section>
 
-    <section id="tecnicos" class="section">
-      <h2>⚙️ Metas Técnicas</h2>
-      <ul>
-        <li>Sensorização de 100 pontos críticos em 12 meses.</li>
-        <li>Plataforma web responsiva com atualizações a cada 30s.</li>
-        <li>Exportação de relatórios em PDF e integração com APIs meteorológicas.</li>
-        <li>Inteligência artificial para previsão de eventos críticos.</li>
-      </ul>
-    </section>
 
-    <section id="socioeducativo" class="section">
-      <h2>📚 Objetivos Socioeducativos</h2>
-      <ul>
-        <li>Educar a população sobre riscos e medidas preventivas.</li>
-        <li>Distribuir materiais informativos em escolas e centros comunitários.</li>
-        <li>Promover oficinas de cidadania climática em comunidades afetadas.</li>
-      </ul>
-    </section>
 
-    <section id="sustentavel" class="section">
-      <h2>🌱 Objetivos Sustentáveis</h2>
-      <ul>
-        <li>Reduzir o uso de energia usando sensores solares autônomos.</li>
-        <li>Utilizar materiais recicláveis e ecológicos nos equipamentos.</li>
-        <li>Minimizar a pegada de carbono da infraestrutura tecnológica.</li>
-      </ul>
-    </section>
 
-    <section id="parcerias" class="section">
-      <h2>🤝 Parcerias Estratégicas</h2>
-      <ul>
-        <li>Colaboração com universidades e centros de pesquisa.</li>
-        <li>Alianças com governos locais, Defesa Civil e ONGs.</li>
-        <li>Compartilhamento de dados com entidades públicas de urbanismo.</li>
-      </ul>
-    </section>
 
-    <section id="comunidade" class="section">
-      <h2>🏘️ Engajamento Comunitário</h2>
-      <ul>
-        <li>Canal direto para denúncias e alertas de moradores.</li>
-        <li>Participação ativa da população na coleta de dados.</li>
-        <li>Fóruns comunitários para desenvolvimento colaborativo de soluções.</li>
-      </ul>
-    </section>
 
-    <section id="impacto" class="section">
-      <h2>📈 Impacto Esperado</h2>
-      <ul>
-        <li>Redução de até 70% nos impactos de enchentes nas áreas monitoradas.</li>
-        <li>Aumento da consciência populacional sobre riscos hídricos.</li>
-        <li>Criação de um modelo replicável para outras regiões do país.</li>
-      </ul>
-    </section>
+
+
+    </div>
+
+
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 BrainRotters | Projeto Inteligente de Prevenção a Enchentes</p>
-    </div>
+  <footer>
+    <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
+  <script src="./src/js/script.js"></script>
 </body>
+
 </html>
