fazendo o html de beneficios

--- a/beneficios.html
+++ b/beneficios.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-    <h1 id="logo">Quiz</h1>
+    <h1 id="logo">Benefícios</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
@@ -21,6 +21,14 @@
       </ul>
     </nav>
   </header>
+  <main id="container-tec">
+
+    <section id="objetivos">
+      <h2>Benefícios</h2>
+      <p>Monitoramento e alertas rápidos reduzem danos, salvam vidas e protegem comunidades vulneráveis a enchentes.</p>
+      <p>Educação ambiental e sustentabilidade fortalecem a resiliência social e preservam ecossistemas afetados pelas inundações.</p>
+      <img src="./src/assets/beneficios.png" alt="Ilustração dos beneficios">
+    </section>
 
 
 
@@ -29,9 +37,16 @@
 
 
 
-   <footer>
+
+    </div>
+
+
+  </main>
+
+  <footer>
     <p>&copy; 2025 BrainRotters. Todos os direitos reservados.</p>
   </footer>
   <script src="./src/js/script.js"></script>
 </body>
+
 </html>
