--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <header>
-    <h1 id="logo">Tecnologia</h1>
+    <h1 id="logo">Problemas</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
