--- a/objetivos.html
+++ b/objetivos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1 id="logo">Tecnologia</h1>
+    <h1 id="logo">Objetivos</h1>
     <nav>
       <ul class="menu">
         <li><a href="./index.html">Problemas</a></li>
